--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@mui/material": "^5.16.7",
     "@mui/x-date-pickers": "^7.28.2",
     "apexcharts": "^3.52.0",
+    "axios": "^1.8.4",
     "dayjs": "^1.11.13",
     "history": "^5.3.0",
     "react": "^18.3.1",
