--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@mui/lab": "^5.0.0-alpha.173",
     "@mui/material": "^5.16.7",
     "@mui/x-date-pickers": "^7.28.2",
+    "@tanstack/react-query": "^5.72.1",
     "apexcharts": "^3.52.0",
     "axios": "^1.8.4",
     "dayjs": "^1.11.13",
