--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@iconify/react": "^5.0.2",
     "@mui/lab": "^5.0.0-alpha.173",
     "@mui/material": "^5.16.7",
+    "@mui/x-data-grid": "^7.28.3",
     "@mui/x-date-pickers": "^7.28.2",
     "@tanstack/react-query": "^5.72.1",
     "apexcharts": "^3.52.0",
