--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@mui/material": "^5.16.7",
     "@mui/x-data-grid": "^7.28.3",
     "@mui/x-date-pickers": "^7.28.2",
+    "@react-pdf/renderer": "^4.3.0",
     "@tanstack/react-query": "^5.72.1",
     "apexcharts": "^3.52.0",
     "axios": "^1.8.4",
