--- a/package.json
+++ b/package.json
@@ -33,11 +33,12 @@
     "@mui/lab": "^5.0.0-alpha.173",
     "@mui/material": "^5.16.7",
     "@mui/x-data-grid": "^7.28.3",
-    "@mui/x-date-pickers": "^7.28.2",
+    "@mui/x-date-pickers": "^7.28.3",
     "@react-pdf/renderer": "^4.3.0",
     "@tanstack/react-query": "^5.72.1",
     "apexcharts": "^3.52.0",
     "axios": "^1.8.4",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "history": "^5.3.0",
     "react": "^18.3.1",
