--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@react-pdf/renderer": "^4.3.0",
     "@tanstack/react-query": "^5.72.1",
     "apexcharts": "^3.52.0",
-    "axios": "^1.8.4",
+    "axios": "^1.9.0",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "history": "^5.3.0",
@@ -49,6 +49,7 @@
     "simplebar-react": "^3.2.6"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.4",
     "@types/node": "^22.5.0",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
