new: added filtering to credit note view table

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@mui/material": "^5.16.7",
     "@mui/x-data-grid": "^7.28.3",
     "@mui/x-date-pickers": "^7.28.3",
+    "@mui/x-date-pickers-pro": "^8.2.0",
     "@react-pdf/renderer": "^4.3.0",
     "@tanstack/react-query": "^5.72.1",
     "apexcharts": "^3.52.0",
