--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
+    "react-hook-form": "^7.56.4",
     "react-router-dom": "^6.26.1",
     "simplebar-react": "^3.2.6",
     "xlsx": "^0.18.5"
