--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
     "history": "^5.3.0",
     "react": "^18.3.1",
@@ -51,7 +52,8 @@
     "react-hook-form": "^7.56.4",
     "react-router-dom": "^6.26.1",
     "simplebar-react": "^3.2.6",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "xlsx-style": "^0.8.13"
   },
   "devDependencies": {
     "@types/axios": "^0.14.4",
